# aoc-2022

./: Makefile  docker-compose.yml  pyproject.toml  sqitch.conf
day/1/: puzzle.md  solve.py
day/10/: puzzle.md
day/2/: puzzle.md  solve.py
day/3/: puzzle.md  solve.py
day/4/: puzzle.md  solve.py
day/5/: puzzle.md  solve.py
day/6/: puzzle.md  solve.py
day/7/: puzzle.md
day/8/: puzzle.md
day/9/: puzzle.md
db/: sqitch.plan
db/deploy/: aocschema.sql  day1.sql  day2-part2.sql  day2.sql  day3.sql  day4.sql  day5.sql  day6.sql
db/revert/: aocschema.sql  day1.sql  day2-part2.sql  day2.sql  day3.sql  day4.sql  day5.sql  day6.sql
db/verify/: aocschema.sql  day1.sql  day2-part2.sql  day2.sql  day3.sql  day4.sql  day5.sql  day6.sql
src/: read.py
src/repository/: repository.py  repository.pyi
src/repository/queries/assignment/: fetch.sql  mutate.sql
src/repository/queries/container/: mutate.sql
src/repository/queries/elves/: mutate.sql
src/repository/queries/inventory/: fetch.sql  mutate.sql
src/repository/queries/meals/: fetch.sql  mutate.sql
src/repository/queries/stream/: fetch.sql  mutate.sql
src/repository/queries/tournament/: fetch.sql  mutate.sql
tests/: conftest.py
tests/repository/: test_repository.py
