[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Sean Stewart <sean_stewart@me.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {version = "^3.1.4", extras = ["binary"]}
yesql = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
